# rtm-wrapper-gui

./: README.md  pyproject.toml
src/rtm_wrapper_gui/: __init__.py  api.py  plot.py  simulation.py  util.py  window.py  workers.py
src/rtm_wrapper_gui/plot/: plotters.py  widgets.py
src/rtm_wrapper_gui/simulation/: __init__.py  base.py  file.py  interactive.py  script.py  workers.py
