[tool.poetry]
name = "rtm-wrapper-gui"
version = "0.1.0-dev"
description = ""
authors = ["Brian Schubert <schubert.b@northeastern.edu>"]
readme = "README.md"
packages = [{ from = "src", include = "rtm_wrapper_gui" }]

[tool.poetry.dependencies]
python = "^3.9,<3.12"  # Upper bound requried by PySide6
pyside6 = "^6.5.2"
matplotlib = "^3.7.2"
numpy = "^1.25.1"

[tool.poetry.scripts]
rtm-gui = "rtm_wrapper_gui.api:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
