[tool.poetry]
name = "rtm-wrapper-gui"
version = "0.1.0-dev"
description = ""
authors = ["Brian Schubert <schubert.b@northeastern.edu>"]
readme = "README.md"
packages = [{ from = "src", include = "rtm_wrapper_gui" }]

[tool.poetry.dependencies]
python = "^3.9,<3.12"  # Upper bound requried by PySide6
pyside6 = "^6.5.2"
matplotlib = "^3.7.2"
numpy = "^1.25.1"
rtm-wrapper = { git = "https://github.com/brianschubert/rtm-wrapper.git", rev = "develop" }
xarray = "^2023.7.0"
typing-extensions = "^4.7.1"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[tool.poetry.scripts]
rtm-gui = "rtm_wrapper_gui.api:run"

# Black config.
[tool.black]
# How many characters per line to allow.
# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
line-length = 88
# Don't skip skip temporary sanity checks.
safe = true
# Python versions that should be supported by Black's output.
target-version = ["py39"]
# Set to true to preview style changes that may be added in black's next major release.
preview = false

# isort config.
[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
